# python-template

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PLANNING.md  README.md  TEMPLATE.md  cspell.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/aw/imports/githubnext/agentics/dcdf09723d42ef9b6c75335e4612fd145d4ccdaa/: workflows_ai-moderator.md  workflows_ci-doctor.md
.github/workflows/: ai-moderator.lock.yml  ai-moderator.md  ci-doctor.lock.yml  ci-doctor.md  ci.yml  daily-malicious-code-scan.lock.yml  daily-malicious-code-scan.md  dependabot-pr-bundler.md  link-checker.lock.yml  link-checker.md  release-please.yml  sub-issue-closer.lock.yml  sub-issue-closer.md  tests.yml
src/hello_world/: __init__.py  exceptions.py  logging.conf  main.py  validators.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_init.py  test_main.py  test_validators.py
