[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world"
version = "0.1.0"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A simple Python project template"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    # Formatting
    "black>=25.1.0",
    # Linting (keeping flake8 for compatibility, but Ruff is preferred)
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "ruff>=0.8.0",
    # Type checking
    "mypy>=1.16.1",
    # Security
    "bandit[toml]>=1.8.0",
    "safety>=3.0.0",
    # Testing
    "pytest>=8.4.1",
    "pytest-cov>=6.2.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-randomly>=3.16.0",  # Randomize test order
    "pytest-timeout>=2.3.0",  # Test timeouts
    "hypothesis>=6.120.0",  # Property-based testing
    # Development tools
    "pre-commit>=4.2.0",
    "pip-audit>=2.7.0",  # Dependency vulnerability scanning
]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
xfail_strict = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["hello_world"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

# ===========================
# Ruff Configuration
# ===========================
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate (commented-out code)
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # NumPy-specific rules
    "PERF",   # Perflint
    "FURB",   # refurb
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module (handled at package level)
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001", # Single line implicit string concatenation (conflicts with formatter)
    "TD003",  # Missing issue link on TODO
    "FIX002", # Line contains TODO
    "I001",   # Import block is un-sorted (using isort instead)
    "I002",   # Missing required import (using isort instead)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected (expected in tests)
    "ARG",     # Unused function args (fixtures may be unused directly)
    "FBT",     # Boolean trap (acceptable in tests)
    "PLR2004", # Magic value used in comparison
    "D103",    # Missing docstring in public function (test methods)
    "ANN",     # Missing type annotations (tests don't need full annotations)
    "S311",    # Standard pseudo-random generators (ok in tests)
    "PLC0415", # Import should be at top-level (needed for testing imports)
    "TRY003",  # Long messages in exceptions (ok in tests)
    "EM101",   # String literal in exception (ok in tests)
    "PT006",   # Wrong type for parametrize (string is fine)
    "PT012",   # pytest.raises block (complex blocks ok in tests)
]
"src/**/conftest.py" = ["INP001"]
"tests/conftest.py" = ["INP001", "PLC0415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["hello_world"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

# ===========================
# Bandit Configuration
# ===========================
[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert warnings (we use them appropriately)

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/**"]
